--- a/notebooks-sample/day-2-1.html
+++ b/notebooks-sample/day-2-1.html
@@ -15219,7 +15219,30 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h1 id="day-2-1">day 2-1<a class="anchor-link" href="#day-2-1">&#182;</a></h1><hr />
+<h1 id="day-2-1">day 2-1<a class="anchor-link" href="#day-2-1">&#182;</a></h1>
+</div>
+</div>
+</div>
+</div>
+<div id="cell-id=1c810781-f73f-4499-b4e2-1fad96108158" class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<p>このJupyterノートブックは<a href="../notebooks/day-2-1.ipynb">こちら(.ipynb版)</a>で確認できます</p>
+
+</div>
+</div>
+</div>
+</div>
+<div id="cell-id=59a14093-5615-40dd-b7d5-5666dab2b67a" class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<hr />
 
 </div>
 </div>
@@ -15521,8 +15544,8 @@ The following packages will be SUPERSEDED by a higher-priority channel:
 
 
 Downloading and Extracting Packages
-ca-certificates-2023 | 145 KB    | ##################################### | 100% 
 certifi-2023.5.7     | 149 KB    | ##################################### | 100% 
+ca-certificates-2023 | 145 KB    | ##################################### | 100% 
 Preparing transaction: done
 Verifying transaction: done
 Executing transaction: done
@@ -15579,8 +15602,8 @@ Note: you may need to restart the kernel to use updated packages.
 
 
 <div class="jp-RenderedText jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/plain">
-<pre>array([0.61884678, 0.42787432, 0.53109371, 0.08880567, 0.38165539,
-       0.51195291, 0.13116384, 0.18881758, 0.65825692, 0.14906721])</pre>
+<pre>array([0.38582238, 0.90950802, 0.85298059, 0.90555836, 0.04440868,
+       0.72469136, 0.62852664, 0.03347229, 0.29377207, 0.6913599 ])</pre>
 </div>
 
 </div>
