--- a/notebooks-sample/day-2-1.html
+++ b/notebooks-sample/day-2-1.html
@@ -15230,7 +15230,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p>このJupyterノートブックは<a href="../notebooks/day-2-1.ipynb">こちら(.ipynb版)</a>で確認できます</p>
+<p>このノートブックの実行例は<a href="../notebooks-sample/day-2-1.html">こちら(HTML版)</a>で確認できます</p>
 
 </div>
 </div>
@@ -15825,7 +15825,7 @@ Note: you may need to restart the kernel to use updated packages.
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h2 id="%E6%AC%A1%E3%81%AE%E3%83%8E%E3%83%BC%E3%83%88%E3%83%96%E3%83%83%E3%82%AF-day-2-2-%E3%82%92%E9%96%8B%E3%81%84%E3%81%A6%E3%81%8F%E3%81%A0%E3%81%95%E3%81%84">&#27425;&#12398;&#12494;&#12540;&#12488;&#12502;&#12483;&#12463; <a href="./day-2-2.ipynb">day-2-2</a> &#12434;&#38283;&#12356;&#12390;&#12367;&#12384;&#12373;&#12356;<a class="anchor-link" href="#%E6%AC%A1%E3%81%AE%E3%83%8E%E3%83%BC%E3%83%88%E3%83%96%E3%83%83%E3%82%AF-day-2-2-%E3%82%92%E9%96%8B%E3%81%84%E3%81%A6%E3%81%8F%E3%81%A0%E3%81%95%E3%81%84">&#182;</a></h2>
+<h2 id="%E7%B6%9A%E3%81%84%E3%81%A6%E3%83%8E%E3%83%BC%E3%83%88%E3%83%96%E3%83%83%E3%82%AF-day-2-2-%E3%82%92%E9%96%8B%E3%81%84%E3%81%A6%E3%81%8F%E3%81%A0%E3%81%95%E3%81%84">&#32154;&#12356;&#12390;&#12494;&#12540;&#12488;&#12502;&#12483;&#12463; <a href="./day-2-2.ipynb">day-2-2</a> &#12434;&#38283;&#12356;&#12390;&#12367;&#12384;&#12373;&#12356;<a class="anchor-link" href="#%E7%B6%9A%E3%81%84%E3%81%A6%E3%83%8E%E3%83%BC%E3%83%88%E3%83%96%E3%83%83%E3%82%AF-day-2-2-%E3%82%92%E9%96%8B%E3%81%84%E3%81%A6%E3%81%8F%E3%81%A0%E3%81%95%E3%81%84">&#182;</a></h2>
 </div>
 </div>
 </div>
