--- a/notebooks-sample/day-2-2.html
+++ b/notebooks-sample/day-2-2.html
@@ -15230,7 +15230,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p>このJupyterノートブックは<a href="../notebooks/day-2-2.ipynb">こちら(.ipynb版)</a>で確認できます</p>
+<p>このノートブックの実行例は<a href="../notebooks-sample/day-2-2.html">こちら(HTML版)</a>で確認できます</p>
 
 </div>
 </div>
